--- a/src/docs/asciidoc/languages/kotlin.adoc
+++ b/src/docs/asciidoc/languages/kotlin.adoc
@@ -61,20 +61,20 @@ WebFlux, and for various other APIs.
 NOTE: Other libraries, such as Reactor and Spring Data, also provide Kotlin extensions
 for their APIs, thus giving a better Kotlin development experience overall.
 
-To retrieve a list of `User` objects in Java, you would normally write the following:
+To retrieve a list of `entity` objects in Java, you would normally write the following:
 
 [source,java,indent=0]
 ----
-	Flux<User> users  = client.get().retrieve().bodyToFlux(User.class)
+	Flux<entity> users  = client.get().retrieve().bodyToFlux(entity.class)
 ----
 
 With Kotlin and the Spring Framework extensions, you can instead write the following:
 
 [source,kotlin,indent=0]
 ----
-	val users = client.get().retrieve().bodyToFlux<User>()
+	val users = client.get().retrieve().bodyToFlux<entity>()
 	// or (both are equivalent)
-	val users : Flux<User> = client.get().retrieve().bodyToFlux()
+	val users : Flux<entity> = client.get().retrieve().bodyToFlux()
 ----
 
 As in Java, `users` in Kotlin is strongly typed, but Kotlin's clever type inference allows
@@ -579,11 +579,11 @@ class UserHandler(builder: WebClient.Builder) {
 
 	suspend fun listView(request: ServerRequest): ServerResponse =
 			ServerResponse.ok().renderAndAwait("users", mapOf("users" to
-			client.get().uri("...").awaitExchange().awaitBody<User>()))
+			client.get().uri("...").awaitExchange().awaitBody<entity>()))
 
 	suspend fun listApi(request: ServerRequest): ServerResponse =
 				ServerResponse.ok().contentType(MediaType.APPLICATION_JSON).bodyAndAwait(
-				client.get().uri("...").awaitExchange().awaitBody<User>())
+				client.get().uri("...").awaitExchange().awaitBody<entity>())
 }
 ----
 
@@ -698,7 +698,7 @@ to make the compiler automatically derive the following members from all propert
 in the primary constructor:
 
 * `equals()` and `hashCode()`
-* `toString()` of the form `"User(name=John, age=42)"`
+* `toString()` of the form `"entity(name=John, age=42)"`
 * `componentN()` functions that correspond to the properties in their order of declaration
 * `copy()` function
 
